--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-helmet": "^5.1.3",
     "react-markdown": "3",
     "react-router-dom": "^4.1.1",
-    "react-snapshot": "^1.1.0"
+    "react-snapshot": "^1.1.0",
+    "react-twitter-embed": "^2.0.4"
   },
   "scripts": {
     "start": "npm-run-all prepare-content -p start:content start:app start:cms",
