--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -1,11 +1,9 @@
 siteTitle: Malditoperro
 siteUrl: 'https://Malditoperro.xyz'
-siteDescription: >-
-  Reportes, Investigaciones, Y Mas.
+siteDescription: 'Reportes, Investigaciones, Y Mas.'
 socialMediaCard:
   image: /images/uploads/card-og.png
   twitterCreatorAccount: '@ossieltweets'
-  twitterSiteAccount: ''
-headerScripts: |-
-  <!-- Add your analytics scripts / verification meta here -->
+  twitterSiteAccount: 'https://twitter.com/malditoperromx'
+headerScripts: <!-- Add your analytics scripts / verification meta here -->
 enableServiceWorker: false
