Update Settings “global-settings”

--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -2,7 +2,7 @@ siteTitle: Malditoperro
 siteUrl: 'https://Malditoperro.xyz'
 siteDescription: 'Reportes, Investigaciones, Y Mas.'
 socialMediaCard:
-  image: /images/uploads/card-og.png
+  image: /images/uploads/card-og.jpg
   twitterCreatorAccount: '@ossieltweets'
   twitterSiteAccount: 'https://twitter.com/malditoperromx'
 headerScripts: <!-- Add your analytics scripts / verification meta here -->
