Update Settings “global-settings”

--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -1,4 +1,4 @@
-siteTitle: Malditoperro
+siteTitle: 'Malditoperro | Reportes, Investigaciones, Y Mas'
 siteUrl: 'https://Malditoperro.xyz'
 siteDescription: 'Reportes, Investigaciones, Y Mas.'
 socialMediaCard:
