upgraded ui / new routes
new images added, twitter feed padding issue fixed, new global css flat dark colors added

--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -3,7 +3,7 @@ siteUrl: 'https://Malditoperro.xyz'
 siteDescription: 'Reportes, Investigaciones, Y Mas.'
 socialMediaCard:
   image: /images/uploads/card-og.jpg
-  twitterCreatorAccount: '@ossieltweets'
+  twitterCreatorAccount: '@ortrmx'
   twitterSiteAccount: 'https://twitter.com/malditoperromx'
 headerScripts: <!-- Add your analytics scripts / verification meta here -->
 enableServiceWorker: false
